# radio_director

./: .gitignore  README.md  pyproject.toml
bot/: .env.example  README.md  bot.py  com.tada.radio-bot.plist  config.py  runner.py  start_bot.sh
docs/: step1_implementation_plan.md  step1_research_report.md
src/radio_director/: __main__.py  config.py  logging_setup.py  runner.py
src/radio_director/models/: cleaned_research.py  (+5 more)
tests/: test_runner.py  test_runner_gate.py  test_runner_integration_llm.py
tests/data/: research_brief_sample.json  show_spec_sample.json  verified_script_sample.json
tests/output/: test_run_id.py  test_run_metadata.py  test_writer.py
tests/phase_a/: _factories.py  test_decoder.py  test_integration_real.py  test_quality_gate.py  test_research_brief.py
tests/phase_b/: _factories.py  test_c2_strip_numbers.py  test_c5_size_guard.py  test_integration_llm.py  test_parser.py  test_planner_retry.py  test_prompt_builder.py  test_show_spec.py  test_step9_planner_stability.py
tests/phase_c/: _factories.py  test_c6_tag_simplification.py  test_conductor.py  test_integration_llm.py  test_parser.py  test_prompt_builder.py  test_script.py  test_segment_generator.py
tests/phase_d/: _factories.py  test_c3_source_attribution.py  test_c4_highly_specific.py  test_c6_citation_src_only.py  test_character_validator.py  test_citation_normalizer.py  test_hallucination_detector.py  test_integration_llm.py  test_metadata_generator.py  test_number_extractor.py  test_p1_number_normalization.py  test_topic_overlap.py  test_verifier.py  test_video_metadata.py
(+26 files in other folders)
